re-parse-proc-macro/tests/compile_fail/parse_errors/bar.rs
use re_parse_proc_macro::re_parse;

fn main() {
    re_parse!("a||B", "111B222");
}