re-parse-proc-macro/tests/compile_fail/parse_errors/bar.stderr
error: Unexpected token '|'
 --> tests/compile_fail/parse_errors/bar.rs:4:15
  |
4 |     re_parse!("a||B", "111B222");
  |               ^^^^^^
